
Release 1.0a1 - 31-Jan-2013
    
    * First public release

Release 1.1a1 - 20-Jun-2013

    * Small improvements in change password page for administrators.
    * Legacy MySQL-based SMS accounting / logging was removed.
    * SMS send and receive overhaul. Allows sending and receiving SMS in a
      variety of ways: talking directly with a Kannel SMS gateway, or using
      an intermediary JSON-RPC web service.
    * Many bugfixes and improvements in reset password ("I have forgotten my 
      password") workflow.
    * Improvements and bugfixes in initial setup script (setup.php); administrator
      can choose setup language and the new SMS arguments are there. A quick test
      to see if the connection and credentials to LDAP is valid can be performed.
    * The key for symmetric encryption of password must now be base64 encoded.
    * ReCAPTCHA settings can now be empty and no CAPTCHA will be requested in
      login / reset password forms.
    * New functionality: "Password Suggestions" in user change password page.
    * New password strength check: customize minimum non-alpha characters in
      password.
    * Administrator settings for password strength.

Release 1.1a2 (WIP)

    * Bugfix while searching from the nav bar
    * Small beautification fix for the "No policies defined" screen